<resources>
    <string name="app_name">CleanArchitectureNoteApp</string>
    <string name="toggle_sort_section_icon">toggle sort section icon</string>
    <string name="add_new_note_floating_action_button">Add note</string>
    <string name="floating_action_button_save_note">Save note</string>
</resources>